--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     width: 420px;
     padding: 50px 0;
     border-radius: 8px;
-    background: #fff;
+    background: black;
     row-gap: 30px;
     flex-direction: column;
     align-items: center;
@@ -51,5 +51,5 @@ body{
 .text{
     font-size: 30px;
     font-weight: 500;
-    color: #606060;
+    color: #7d2ae8;
 }
