--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     width: 420px;
     padding: 50px 0;
     border-radius: 8px;
-    background: black;
+    background: #171717;
     row-gap: 30px;
     flex-direction: column;
     align-items: center;
